--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1,5 +1,5 @@
 :root {
-  --primary: #fb4e4e;
+  --primary: #ff4800;
   --secondary: #333;
   --white: #f1f1f1;
   --white-light: #ffffff;
@@ -17,15 +17,15 @@
   * =======================================================================
   **/
 body {
-  min-height: 100vh;
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: 100vh 2fr 325px;
+  grid-template-rows: 100vh 1fr 400px;
   grid-template-areas:
-    "header"
-    "main"
-    "footer";
+    "header" /* 100vh */
+    "main" /* 1fr */
+    "footer"; /* 325px */
 }
+
 /** 
   * =======================================================================
   * HEADER 
@@ -34,37 +34,55 @@ body {
 header {
   grid-area: header;
 }
+/** 
+  * =======================================================================
+  * HEADER SLOGAN + TITLE
+  * =======================================================================
+  **/
 header div {
+  height: 50vh;
   background-image: url(../../assets/images/city-night-view-g75b82b18a_1920.jpg);
   background-size: cover;
+  background-position: center;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  row-gap: 20px;
-  height: 80vh;
+  row-gap: 40px;
 }
 header div span {
   color: var(--white);
-  font-size: 24px;
+  background-color: var(--secondary);
+  padding: 10px 25px;
+  opacity: 0.8;
+  font-size: calc(18px + 1vmin);
 }
 header div h1 {
   color: var(--primary);
-  font-size: 84px;
+  font-size: calc(38px + 2vmin);
   text-transform: uppercase;
-  text-shadow: 0 0 5px var(--black);
+  text-align: center;
+  text-shadow: 0 0 2px var(--black);
 }
+/** 
+  * =======================================================================
+  * HEADER PRESENTATION
+  * =======================================================================
+  **/
 header p {
-  height: 20vh;
+  height: 50vh;
   background-color: var(--secondary);
-  letter-spacing: 1.8px;
-  padding: 25px 100px;
+  padding: 50px;
   display: flex;
   align-items: center;
   justify-content: center;
   color: var(--white);
   text-shadow: 0 0 1px var(--secondary);
   border-top: 4px solid var(--primary);
+  border-bottom: 4px solid var(--primary);
+  font-size: calc(12px + 1vmin);
+  letter-spacing: 1.8px;
+  box-shadow: inset 0 0 50px var(--black);
 }
 /** 
   * =======================================================================
@@ -75,77 +93,80 @@ main {
   grid-area: main;
   background-color: var(--white);
 }
-
-main section .card {
+/** 
+  * =======================================================================
+  * MAIN ACTIVITY
+  * =======================================================================
+  **/
+main section.activity .card {
   display: flex;
-  width: 100vw;
+  flex-direction: column;
 }
-
-main section .card:nth-child(even) {
-  display: flex;
-  flex-direction: row-reverse;
-}
-
-main section .card img {
-  width: 50vw;
+main section.activity .card img {
+  width: 100%;
   background-size: cover;
+  filter: sepia(35%);
+  height: 350px;
 }
-main section .card div {
-  width: 50vw;
+main section.activity .card div {
   padding: 50px;
 }
-
-main section .card div h2 {
+main section.activity .card div h2 {
   color: var(--primary);
-  font-size: 36px;
+  font-size: calc(36px + 1vmin);
   margin-bottom: 25px;
 }
-
-main section .card div p {
+main section.activity .card div p {
   margin-bottom: 10px;
 }
-
-.btn {
+main section.activity .card div .btn {
+  display: flex;
+  align-items: flex-end;
   border-radius: 20px;
   padding: 8px 16px;
   background-color: var(--primary);
   color: var(--white);
   text-transform: uppercase;
-  outline: var(--white) 1px solid;
+  outline: none;
+  border: var(--white-light) 1px solid;
   cursor: pointer;
   margin-top: 25px;
 }
-
-/* SECTION GALLERY */
+/** 
+  * =======================================================================
+  * MAIN GALLERY 
+  * =======================================================================
+  **/
 main section:last-child {
   background-color: var(--white-light);
-  padding: 50px 0;
+  padding: 100px 50px 25px;
 }
-
 main section:last-child h2 {
+  font-size: calc(28px + 2vmin);
   text-align: center;
   margin-bottom: 25px;
 }
 main section:last-child p {
-  width: 80%;
-  margin: 0 auto 50px;
+  letter-spacing: 1.8px;
+  width: 90%;
+  margin: 25px auto;
 }
-
 main section:last-child .gallery {
-  padding: 25px 50px;
+  padding: 50px 0;
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
-  row-gap: 5px;
-  column-gap: 5px;
+  grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+  row-gap: 25px;
 }
-
 main section:last-child .gallery figure {
-  height: 300px;
+  height: 350px;
 }
 main section:last-child .gallery figure img {
   width: 100%;
-  height: 250px;
+  height: 300px;
   background-size: cover;
+  border: 8px solid var(--secondary);
+  border-radius: 4px 4px 0 0;
+  box-shadow: 0 0 15px var(--black);
 }
 main section:last-child .gallery figure figcaption {
   display: flex;
@@ -153,6 +174,10 @@ main section:last-child .gallery figure figcaption {
   justify-content: center;
   height: 50px;
   font-size: 24px;
+  text-transform: uppercase;
+  font-style: italic;
+  font-weight: 700;
+  color: var(--secondary);
 }
 
 /** 
@@ -162,24 +187,23 @@ main section:last-child .gallery figure figcaption {
   **/
 footer {
   grid-area: footer;
+  width: 100%;
 }
-
 footer .emergency {
   background-color: var(--primary);
   height: 250px;
-  display: flex;
   padding: 50px;
+  display: flex;
   justify-content: space-evenly;
   align-items: flex-start;
 }
-
 footer .emergency h3 {
-  font-size: 48px;
+  font-size: 28px;
   align-self: flex-start;
   color: var(--white);
   text-shadow: 0 0 1.5px var(--black);
+  text-transform: uppercase;
 }
-
 footer .emergency ul {
   border-top: 4px solid var(--white);
   padding-top: 25px;
@@ -189,12 +213,15 @@ footer .emergency ul {
 }
 footer .nav {
   background-color: var(--secondary);
+  padding: 25px;
+  height: 150px;
   display: flex;
-  padding-left: 50px;
-  height: 75px;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
 }
 footer .nav nav {
-  width: 50%;
+  width: 100%;
 }
 footer .nav nav ul {
   display: flex;
@@ -210,155 +237,283 @@ footer div {
   justify-content: center;
   height: 75px;
 }
-
 footer div img {
   height: 36px;
   margin: 0 10px;
 }
 
-@media (max-width: 576px) {
+/** 
+  * =======================================================================
+  * TABLETTE 
+  * =======================================================================
+  **/
+@media (min-width: 577px) {
   /** 
   * =======================================================================
   * BODY 
   * =======================================================================
   **/
   body {
-    grid-template-rows: 100vh 2fr 500px;
+    grid-template-rows: 100vh 1fr 325px;
   }
 
-/** 
-  * =======================================================================
-  * HEADER 
-  * =======================================================================
-  **/
+  /** 
+    * =======================================================================
+    * HEADER 
+    * =======================================================================
+    **/
   header div {
-    row-gap: 20px;
-    height: 70vh;
+    height: 60vh;
+    row-gap: 40px;
+  }
+  header div span {
+    padding: 12px 27px;
+    font-size: calc(20px + 1vmin);
   }
   header div h1 {
-    text-align: center;
-    font-size: 64px;
+    font-size: calc(48px + 2vmin);
   }
   header p {
-    height: 30vh;
-    letter-spacing: 2px;
-    padding: 25px;
+    height: 40vh;
+    padding: 40px;
   }
-/** 
-  * =======================================================================
-  * MAIN 
-  * =======================================================================
-  **/
-  
-  main section .card {
+  /** 
+    * =======================================================================
+    * MAIN ACTIVITY
+    * =======================================================================
+    **/
+  main section.activity .card {
     display: flex;
-    flex-direction: column;
-    width: 100vw;
+    flex-direction: row;
   }
-  
-  main section .card:nth-child(even) {
-    display: flex;
-    flex-direction: column;
+  main section.activity .card img {
+    width: 50vw;
+    height: 450px;
   }
-  
-  main section .card img {
-    width: 100vw;
-    background-size: cover;
-  }
-  main section .card div {
-    width: 100vw;
+  main section.activity .card div {
+    width: 50vw;
     padding: 50px;
+    height: 450px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
   }
-  
-  main section .card div h2 {
+  main section.activity .card div h2 {
     color: var(--primary);
-    font-size: 36px;
+    font-size: calc(28px + 1vmin);
     margin-bottom: 25px;
   }
-  
-  main section .card div p {
+  main section.activity .card div p {
     margin-bottom: 10px;
   }
-  
-  .btn {
+  main section.activity .card div .btn {
+    display: flex;
+    align-items: flex-end;
     border-radius: 20px;
     padding: 8px 16px;
     background-color: var(--primary);
     color: var(--white);
     text-transform: uppercase;
-    outline: var(--white) 1px solid;
+    outline: none;
+    border: var(--white-light) 1px solid;
     cursor: pointer;
     margin-top: 25px;
   }
-  
-  /* SECTION GALLERY */
-  main section:last-child {
-    background-color: var(--white-light);
-    padding: 50px 0;
+  main section.activity .card:nth-child(even) {
+    display: flex;
+    flex-direction: row-reverse;
   }
-  
+  /** 
+  * =======================================================================
+  * MAIN GALLERY 
+  * =======================================================================
+  **/
   main section:last-child h2 {
-    text-align: center;
-    margin-bottom: 25px;
+    font-size: calc(32px + 2vmin);
   }
-  main section:last-child p {
-    width: 80%;
-    margin: 0 auto 50px;
-  }
-  
   main section:last-child .gallery {
-    padding: 25px 50px;
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
-    row-gap: 5px;
-    column-gap: 5px;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    row-gap: 25px;
+    column-gap: 25px;
   }
-  
+
+  /** 
+  * =======================================================================
+  * FOOTER 
+  * =======================================================================
+  **/
+  footer .emergency h3 {
+    font-size: 32px;
+  }
+}
+
+/** 
+  * =======================================================================
+  * DESKTOP
+  * =======================================================================
+  **/
+@media (min-width: 777px) {
+  /** 
+  * =======================================================================
+  * BODY 
+  * =======================================================================
+  **/
+  body {
+    grid-template-rows: 100vh 1fr 325px;
+  }
+
+  /** 
+    * =======================================================================
+    * HEADER 
+    * =======================================================================
+    **/
+  header div {
+    height: 70vh;
+    row-gap: 50px;
+  }
+  header div span {
+    padding: 14px 29px;
+    font-size: calc(22px + 1vmin);
+  }
+  header div h1 {
+    font-size: calc(56px + 2vmin);
+  }
+  header p {
+    height: 30vh;
+    padding: 40px;
+  }
+  /** 
+  * =======================================================================
+  * MAIN GALLERY 
+  * =======================================================================
+  **/
+  main section:last-child h2 {
+    font-size: calc(38px + 2vmin);
+  }
+  main section:last-child .gallery {
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  }
   main section:last-child .gallery figure {
     height: 300px;
   }
   main section:last-child .gallery figure img {
     width: 100%;
     height: 250px;
-    background-size: cover;
   }
-  main section:last-child .gallery figure figcaption {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 50px;
-    font-size: 24px;
-  }
-  
   /** 
   * =======================================================================
   * FOOTER 
   * =======================================================================
   **/
-  footer .emergency {
-    flex-direction: column;
-    height: 350px;
-  }
   footer .emergency h3 {
-    margin-bottom: 25px;
+    font-size: 44px;
   }
-
   footer .nav {
-    height: 150px;
+    height: 100px;
     display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
+    flex-direction: row;
+  }
+  footer .nav nav {
+    width: 50%;
+  }
+}
+
+/** 
+  * =======================================================================
+  * DESKTOP XL
+  * =======================================================================
+  **/
+@media (min-width: 997px) {
+  /** 
+  * =======================================================================
+  * BODY 
+  * =======================================================================
+  **/
+  body {
+    grid-template-rows: 100vh 1fr 325px;
+    background-color: var(--secondary);
   }
 
-  footer .nav nav {
-    width: 100%;
+  /** 
+    * =======================================================================
+    * HEADER 
+    * =======================================================================
+    **/
+  header {
+    max-width: 1200px;
+    margin: 0 auto;
   }
-  footer .nav nav ul {
-    width: 100%;
+  header div {
+    height: 70vh;
   }
-  footer div img {
-    height: 36px;
-    margin: 0 10px;
+  header div span {
+    padding: 16px 32px;
+    font-size: calc(24px + 1vmin);
+  }
+  header div h1 {
+    font-size: calc(69px + 2vmin);
+  }
+  header p {
+    height: 30vh;
+    padding: 40px 50px;
+  }
+  /** 
+  * =======================================================================
+  * MAIN 
+  * =======================================================================
+  **/
+  main {
+    max-width: 1200px;
+    margin: 0 auto;
+  }
+  /** 
+    * =======================================================================
+    * MAIN ACTIVITY
+    * =======================================================================
+    **/
+  main section.activity .card img {
+    width: 50%;
+    height: 500px;
+  }
+  main section.activity .card div {
+    width: 50%;
+    padding: 60px;
+    height: 500px;
+  }
+  main section.activity .card div h2 {
+    font-size: calc(32px + 1vmin);
+  }
+  main section.activity .card div .btn {
+    padding: 12px 18px;
+    font-size: 18px;
+    font-weight: 700;
+    text-shadow: 0 0 1.5px var(--black);
+  }
+  /** 
+  * =======================================================================
+  * MAIN GALLERY 
+  * =======================================================================
+  **/
+  main section:last-child h2 {
+    font-size: calc(46px + 2vmin);
+  }
+  main section:last-child .gallery {
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  }
+  main section:last-child .gallery figure {
+    height: 250px;
+  }
+  main section:last-child .gallery figure img {
+    height: 200px;
+  }
+  /** 
+  * =======================================================================
+  * FOOTER 
+  * =======================================================================
+  **/
+  footer {
+    max-width: 1200px;
+    margin: 0 auto;
   }
 }
